# company-leadership-rag-agent

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  session.json
data/fixtures/: meetcampfire.com.json  robinhood.com.json
docs/: acceptance-criteria.md  agent-collaboration.md  architecture.md  assignment.md  data-sourcing-policy.md  delivery-checklist.md  evaluation-metrics.md  implementation-plan.md  leadership-results.md  project-thoughts.md  questions.md  risk-register.md  verification-report.md  work-breakdown.md
scripts/: evaluate.py
src/company_rag/: __init__.py  answerer.py  cli.py  config.py  db.py  fixtures.py  llm.py  models.py  normalize.py
src/company_rag/pipeline/: discover.py  extract.py  fetch.py  run.py  structured.py
src/company_rag/rag/: retriever.py
tests/: test_cli.py  test_fixtures_and_retrieval.py  test_llm.py  test_normalize.py
