[project]
name = "company-leadership-rag-agent"
version = "0.1.0"
description = "Take-home Company Leadership RAG Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "httpx>=0.27.2",
  "openai>=1.59.0",
  "pydantic>=2.9.2",
  "python-dotenv>=1.0.1",
  "rich>=13.8.1",
  "typer>=0.12.5",
]

[dependency-groups]
dev = [
  "pytest>=8.3.3",
  "ruff>=0.6.9",
]

[project.scripts]
company-rag = "company_rag.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/company_rag"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "live: tests that require network and API keys",
]
